add routes and Header

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,7 +10,11 @@
 
   --font-size-header: 26px;
 
+  --transition: 0.4s;
+
   --border-radius-small: 3px;
+
+  --theme-default-header: #cccc46;
 }
 
 body {
@@ -18,4 +22,12 @@ body {
   padding: 0;
   background-color: var(--color-dark-gray);
   font-family: var(--font-family-main);
+}
+
+.header__text {
+  line-height: 1.7;
+  font-size: var(--font-size-header);
+  text-shadow: 0 0 2px var(--color-black);
+  color: var(--theme-default-header);
+  transition: color var(--transition);
 }
