--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,12 +3,18 @@
   --color-black: #000;
   --color-dark-gray: #10100e;
   --color-yellow: #ffff00;
+  --color-blue: #6a83fb;
+  --color-violet: #ae72c2;
 
   --spacing-medium: 20px;
+  --spacing-large: 30px;
 
   --font-family-main: sans-serif;
 
   --font-size-header: 26px;
+  --font-bold: 600;
+
+  --text-shadow-yellow: 0 0 2px var(--color-white), 0 0 40px var(--color-blue);
 
   --transition: 0.4s;
 
