--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -11,7 +11,9 @@
 
   --font-family-main: sans-serif;
 
-  --font-size-header: 26px;
+  --font-size-header-main: 26px;
+  --font-size-main: 16px;
+  --width-max: 1200px;
   --font-bold: 600;
 
   --text-shadow-yellow: 0 0 2px var(--color-white), 0 0 40px var(--color-blue);
@@ -21,6 +23,7 @@
   --border-radius-small: 3px;
 
   --theme-default-header: #cccc46;
+  --theme-default-bgimage: url(@static/bg.jpg);
 }
 
 body {
@@ -28,6 +31,16 @@ body {
   padding: 0;
   background-color: var(--color-dark-gray);
   font-family: var(--font-family-main);
+  font-size: var(--font-size-main);
+  background-image: var(--theme-default-bgimage);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: top left;
+  background-attachment: fixed;
+}
+
+img {
+  display: block;
 }
 
 .header__text {
