--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -11,12 +11,15 @@
 
   --font-family-main: sans-serif;
 
-  --font-size-header-main: 26px;
+  --font-size-header: 26px;
+  --font-size-subheader: 18px;
   --font-size-main: 16px;
+
   --width-max: 1200px;
   --font-bold: 600;
 
-  --text-shadow-yellow: 0 0 2px var(--color-white), 0 0 40px var(--color-blue);
+  --text-shadow-yellow: 0 0 2px var(--color-white), 0 0 40px var(--color-yellow);
+  --text-shadow-blue: 0 0 2px var(--color-white), 0 0 40px var(--color-blue);
 
   --transition: 0.4s;
 
