completed elements styles

--- a/src/components/PeoplePage/PeopleNavigation/PeopleNavigation.module.css
+++ b/src/components/PeoplePage/PeopleNavigation/PeopleNavigation.module.css
@@ -1,3 +1,7 @@
-.link {
-  margin: 20px;
+.container {
+  display: flex;
+  justify-content: center;
+}
+.buttons {
+  margin: var(--spacing-small);
 }
