--- a/src/components/UI/UiButton/UiButton.module.css
+++ b/src/components/UI/UiButton/UiButton.module.css
@@ -14,3 +14,27 @@
 
   cursor: pointer;
 }
+.button:disabled,
+.button:disabled:hover {
+  color: var(--color-gray);
+  background-color: transparent;
+  border-color: var(--color-gray);
+  cursor: auto;
+}
+
+.dark {
+  border: 1px solid var(--color-white);
+  color: var(--color-white);
+}
+.dark:hover {
+  background-color: var(--color-white);
+  color: var(--color-black);
+}
+.light {
+  border: 1px solid var(--color-black);
+  color: var(--color-black);
+}
+.light:hover {
+  color: var(--color-white);
+  background-color: var(--color-black);
+}
