--- a/src/components/UI/index.css
+++ b/src/components/UI/index.css
@@ -1,6 +1,9 @@
 :root {
+  --color-white: #fff;
+  --color-black: #000;
+  --color-gray: #9c9c9c;
   --font-size-small: 14px;
   --font-family-main: sans-serif;
   --font-bold: 600;
-  --transition: 0, 4s;
+  --transition: 0.4s;
 }
