--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,6 +7,7 @@
   --color-violet: #ae72c2;
 
   --spacing-medium: 20px;
+  --spacing-small: 10px;
   --spacing-large: 30px;
 
   --font-family-main: sans-serif;
