--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,6 +5,7 @@
   --color-yellow: #ffff00;
   --color-blue: #6a83fb;
   --color-violet: #ae72c2;
+  --color-red: #f75d83;
 
   --spacing-ultra-small: 5px;
   --spacing-medium: 20px;
