--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -24,6 +24,13 @@
   --text-shadow-yellow: 0 0 2px var(--color-white), 0 0 40px var(--color-yellow);
   --text-shadow-blue: 0 0 2px var(--color-white), 0 0 40px var(--color-blue);
 
+  --box-shadow-white: 0 16px 24px 2px rgba(255, 255, 255, 0.02),
+    0 6px 30px 5px rgba(255, 255, 255, 0.04),
+    0 8px 10px -5px rgba(255, 255, 255, 0.1);
+
+  --box-shadow-black: 0 16px 24px 2px rgba(0, 0, 0, 0.5),
+    0 6px 30px 5px rgba(0, 0, 0, 0.1), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
+
   --transition: 0.4s;
 
   --margin-list: 7px;
