--- a/src/components/Favorite/Favorite.module.css
+++ b/src/components/Favorite/Favorite.module.css
@@ -7,10 +7,16 @@
   flex-shrink: 0;
   margin-left: auto;
 }
+.icon {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center center;
+}
 .counter {
+  position: absolute;
   top: -5px;
   right: -5px;
-  position: absolute;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -19,13 +25,8 @@
   font-size: 13px;
   font-weight: var(--font-bold);
   color: var(--color-black);
+  text-decoration: none;
   border-radius: 50%;
-  box-shadow: var(--box-shadow-white);
   background-color: var(--color-white);
-}
-.icon {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  object-position: center center;
+  box-shadow: var(--box-shadow-white);
 }
