add searchPage and styles

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -63,6 +63,11 @@
   --theme-neutral-bgimage: url(@static/bg.jpg);
   --theme-default-bgimage: var(--theme-neutral-bgimage);
 }
+*,
+*:after,
+*:before {
+  box-sizing: border-box;
+}
 
 body {
   margin: 0;
