add video-fail and scrollbar-styles

--- a/src/components/ErrorMessage/ErrorMessage.module.css
+++ b/src/components/ErrorMessage/ErrorMessage.module.css
@@ -12,3 +12,10 @@
   -webkit-text-stroke-width: 0.5px;
   -webkit-text-fill-color: transparent;
 }
+.video {
+  display: block;
+  margin: auto;
+  margin-top: var(--spacing-large);
+  border-radius: var(--border-redius-medium);
+  box-shadow: var(--box-shadow-white);
+}
