--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -93,3 +93,23 @@ img {
   color: var(--theme-default-header);
   transition: color var(--transition);
 }
+/* SCROLL */
+
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+* {
+  scrollbar-color: rgb(37, 56, 97) rgba(0, 0, 0, 0.7);
+  scrollbar-width: thin;
+}
+::-webkit-scrollbar-thumb {
+  background-color: rgb(37, 56, 97);
+  border-radius: 2px;
+}
+::-webkit-scrollbar-track {
+  background-color: rgba(0, 0, 0, 0.7);
+}
+::-webkit-scrollbar-corner {
+  background-color: rgba(0, 0, 0, 0.7);
+}
