--- a/src/components/UI/UiInput/UiInput.module.css
+++ b/src/components/UI/UiInput/UiInput.module.css
@@ -1,8 +1,8 @@
-.wrapper__input {
+/* .wrapper__input {
   --border-radius: 3px;
   --border: 3px;
   --clear-width: 35px;
-}
+} */
 
 .wrapper__input {
   position: relative;
